Version 2.1.89
    Fixed a bug that could result in Tree Feller failing to remove parts of a tree

Version 2.1.88
    mcMMO is now more compatible with a plugin named Project Korra
    mcMMO will no longer process combat triggers for damage at or below 0

Version 2.1.87
    (Level caps are not on by default in mcMMO, this is something you can turn on)

    Players who reach either the power level cap or skill level cap will now be informed that they have done so
    XP Bars will no longer be sent to players who have reached the power level or skill level cap respectively
    Level up messages will no longer be sent to players who have reached the power level or skill level cap respectively
    Fixed a bug where mcMMO would send level up notifications to a player if the custom level up event from mcMMO was cancelled
    New locale strings 'LevelCap.PowerLevel' & 'LevelCap.Skill'

Version 2.1.86
    Players will no longer be told they got a perfect result when salvaging if they are below max skill level
    Salvage results will now travel towards the player instead of moving in a random direction
    (FIX) You cannot view stats of players who are offline if your server limits the range on inspect for you via permissions or settings
    (FIX) Players will no longer be told they lack skill in salvage if they already qualify for the best possible result for the item
    (FIX) Fixed a bug where arcane salvage was being used to calculate salvage results instead of scrap collector
    (FIX) Added the missing locale color for 'Commands.Party.Commands'
    Modified colors used in locale strings 'Salvage.Skills.Lottery.Normal', 'Salvage.Skills.Lottery.Perfect', and 'Profile.Loading.FailurePlayer'
    When failing to load a profile mcMMO will increase the amount of time it waits before reattempting to load the profile for each failure

    NOTES:
    You can (and always have been able) to turn off the inspect range check by setting it to 0 in the config