@@ -45,6 +45,7 @@ import com.gmail.nossr50.util.scoreboards.ScoreboardManager;
 import com.gmail.nossr50.util.skills.RankUtils;
 import com.gmail.nossr50.util.upgrade.UpgradeManager;
 import com.gmail.nossr50.worldguard.WorldGuardManager;
+import com.gmail.nossr50.worldguard.WorldGuardUtils;
 import com.google.common.base.Charsets;
 import net.shatteredlands.shatt.backup.ZipLibrary;
 import org.bstats.bukkit.Metrics;
@@ -309,8 +310,12 @@ public class mcMMO extends JavaPlugin {
     @Override
     public void onLoad()
     {
-        if(getServer().getPluginManager().getPlugin("WorldGuard") != null)
-            WorldGuardManager.getInstance().registerFlags();
+        if(getServer().getPluginManager().getPlugin("WorldGuard") != null) {
+            //Make sure WG is compatible before proceeding
+            if(WorldGuardUtils.isWorldGuardLoaded()) {
+                WorldGuardManager.getInstance().registerFlags();
+            }
+        }
     }
 
     /**
